package edu.fiuba.algo3.modelo;

public interface IRespuestaDelEvento {
    public String obtenerRespuesta();
}


