@startuml

interface IRespuestaDelEvento
{
    + {abstract} obtenerRespuesta(): String
}

class Pista
{
    - pista: String
}

class Amenaza
{
    - amenaza:String
}

class LadronAtrapado
{
    - arresto:String
}

class LadronEscapo
{
    - huida:String
}

IRespuestaDelEvento <|.. Pista
IRespuestaDelEvento <|.. Amenaza
IRespuestaDelEvento <|.. LadronAtrapado
IRespuestaDelEvento <|.. LadronEscapo

@enduml